info tooltip + fix x overflow

--- a/sostituzioni/view/static/style/index.css
+++ b/sostituzioni/view/static/style/index.css
@@ -25,6 +25,7 @@ html,
 body {
     margin: 0;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
